     vectors and matrices for unstructured grid problems; just indicate those node numbers with 
     negative numbers.

  KSP

    The option -ksp_bsmonitor is not longer needed, use -ksp_truemonitor for the same 
    affect.
    
    added an additional argument to KSPSetResidualHistory() see manual page. Suggested
    by PETSc user Maria Murillo.
    
  PC

  Added option -pc_ilu_diagonal_fill PCILUSetAllowDiagonalFill() see manual page;
  helps for ILU(k) on matrices with missing diagonal entries.

  Removed support for block Gauss-Seidel from the distribution -pc_type bgs    

  AO

    

  IS

    
  Draw

    DrawCreate() creates a generic draw object whose type can be set at run time
    with DrawSetType()

    VIEWER_DRAWX_.... replaced with VIEWER_DRAW_....

    The arguments of ViewerDrawGetDraw have been changed

  General

    Added OptionsGetLogical()

    Remove the gvec directory from the distribution. If you are using this
 please let us and know and we can provide it or provide alternative code
to do what you need.

    Moved all the compiler/optimization information for each PETSC_ARCH
    from the various base.g, base.O_c++ etc files all into the single file
    base. Now configuration for your system should require only editing
    ${PETSC_ARCH}/base and ${PETSC_ARCH}/base.site

    The PETSC_ARCH rs6000 is now for IBM rs6000 workstations running MPICH or LAM
    while rs6000_sp is for IBM SPs.

    We now included PETSC_ARCH of solaris_gnu, rs6000_gnu for those systems
    when using the gnu compilers

    Thanks to the generosity of the FreeBSD organization we are now supporting
    freebsd again

    Added optional filename to -log_info <filename> option. PETSc will open
  a seperate file, called filename.rank for each processor and print the 
  output there.

    Added PetscTypeCompare(), see the manual page


   Routines with the suffix withcoloring have been changed to the suffix color
   to get around 31 character limit in names.
